fix back button placement on mobile devices

--- a/components/travel/style.css
+++ b/components/travel/style.css
@@ -6,6 +6,7 @@ body {
 
 h1 {
   text-align: center;
+  margin-top: 50px;
 }
 
 .image-container {
